added the nodes link

--- a/views/toolbar.jade
+++ b/views/toolbar.jade
@@ -1,5 +1,7 @@
 a(href='/admin/users') Manage Users
 span &nbsp;|&nbsp;
+a(href='/admin/nodes') Manage Nodes
+span &nbsp;|&nbsp;
 a(href='/admin/apikeys') Manage API Keys
 span &nbsp;|&nbsp;
 a(href='/profile') Profile
