--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,5 @@ block content
   h1= title
   p Welcome to #{title}
   a(href='/admin/') Admin Area
+  br
+  a(href='/temperature/') Temperature Data
