squashed some data view bugs

--- a/views/temperature.jade
+++ b/views/temperature.jade
@@ -6,4 +6,4 @@ block content
     ul
         each val, index in nodes
             li
-                a(href="/temperature/" + val._id) #{val.name}
+                a(href="/temperature/" + val.sensorNodeID) #{val.name}
